# Trimorph

./: .gitignore  .gitmodules  COMPLETION_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  HYBRID_ARCHITECTURE.md  LICENSE  Makefile  NEW_ARCHITECTURE.md  README.md  SECURITY_IMPROVEMENTS.md  final-pkgmgr  final_pkgmgr.c  install.sh  plan.md  setup-distro.sh  trimorph  trimorph-core  unit_tests.c  verify_implementation.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
doc/: COMPONENTS.md  CROSS_DISTRO_SETUP.md  INSTALLATION.md  README.md  SUMMARY.md  getting-started.md  index.md  jail-runner.md  scripts.md  troubleshooting.md
etc/portage/: bashrc
etc/systemd/system/: trimorph.slice
etc/trimorph/jails.d/: alpine.conf  arch.conf  deb.conf  fedora.conf  gentoo.conf  opensuse.conf  test.conf
jail-runner/: Cargo.toml
jail-runner/src/: main.rs
src/: trimorph.h
src/config/: config_parser.c
src/core/: jail_manager.c  main.c
src/daemon/: trimorphd.c
src/installer/: installer.c
test/: core.bats
tui/: Cargo.toml
tui/src/: config.rs  main.rs
tui/src/components/: log_view.rs  mod.rs  resource_monitor.rs  status_bar.rs  title_bar.rs
usr/local/sbin/: trimorph-bootstrap  trimorph-export  trimorph-init-db  trimorph-install  trimorph-install-local  trimorph-parse-conf  trimorph-solo  trimorph-validate
vscode-extension/: .gitignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
